--- a/services_new.html
+++ b/services_new.html
@@ -782,7 +782,7 @@
 
                 <form class="custom-design-form">
                     <input type="email" class="custom-design-input" placeholder="Enter Your Email Address...">
-                    <button type="submit" class="custom-design-btn">Get a Quote</button>
+                    <a href="contact_new.html" class="custom-design-btn">Get a Quote</a>
                 </form>
             </div>
         </div>
