--- a/services_new.html
+++ b/services_new.html
@@ -113,6 +113,11 @@
             object-fit: cover;
             display: block;
             transform: scale(1.3);
+            /* 苹果设备兼容性修复 */
+            -webkit-object-fit: cover;
+            -o-object-fit: cover;
+            object-position: center;
+            -webkit-object-position: center;
         }
 
 
@@ -240,6 +245,13 @@
             height: 100%;
             object-fit: cover;
             border-radius: 10px;
+            /* 苹果设备兼容性修复 */
+            -webkit-object-fit: cover;
+            -o-object-fit: cover;
+            object-position: center;
+            -webkit-object-position: center;
+            /* 防止图片变形 */
+            max-width: 100%;
         }
 
 
@@ -304,6 +316,15 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            /* 苹果设备兼容性修复 */
+            -webkit-object-fit: cover;
+            -o-object-fit: cover;
+            object-position: center;
+            -webkit-object-position: center;
+            /* 防止图片变形 */
+            max-width: 100%;
+            height: auto;
+            min-height: 200px;
         }
 
         .service-content {
@@ -494,6 +515,33 @@
             .spacer-div {
                 height: 130px !important;
             }
+
+            /* 移动设备图片修复 */
+            .service-image {
+                height: 200px !important;
+                overflow: hidden;
+            }
+
+            .service-image img {
+                width: 100% !important;
+                height: 100% !important;
+                object-fit: cover !important;
+                -webkit-object-fit: cover !important;
+                object-position: center !important;
+                -webkit-object-position: center !important;
+            }
+
+            .team-image-container {
+                height: 300px !important;
+                overflow: hidden;
+            }
+
+            .team-image {
+                width: 100% !important;
+                height: 100% !important;
+                object-fit: cover !important;
+                -webkit-object-fit: cover !important;
+            }
         }
 
         .hero-content {
@@ -505,13 +553,64 @@
             text-align: center;
             width: 85%;
         }
+
+        /* 苹果设备专用修复 */
+        @supports (-webkit-appearance: none) {
+            /* Safari 专用修复 */
+            .service-image img {
+                height: 200px !important;
+                width: 100% !important;
+                object-fit: cover !important;
+                -webkit-object-fit: cover !important;
+            }
+
+            .team-image {
+                object-fit: cover !important;
+                -webkit-object-fit: cover !important;
+            }
+
+            .payment-icon img {
+                object-fit: contain !important;
+                -webkit-object-fit: contain !important;
+                transform: none !important;
+                -webkit-transform: none !important;
+            }
+        }
+
+        /* iOS 设备专用修复 */
+        @media screen and (-webkit-min-device-pixel-ratio: 2) {
+            .service-image {
+                overflow: hidden;
+                position: relative;
+            }
+
+            .service-image img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                -webkit-object-fit: cover;
+            }
+
+            .team-image-container {
+                overflow: hidden;
+                position: relative;
+            }
+
+            .hero-section {
+                background-attachment: scroll !important;
+                -webkit-background-attachment: scroll !important;
+            }
+        }
     </style>
 </head>
 
 <body>
 
     <section id="home" class="hero-section position-relative"
-        style="background: linear-gradient(135deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)), url('img/img2.jpg'); background-size: cover; background-position: center; background-attachment: fixed;">
+        style="background: linear-gradient(135deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)), url('img/img2.jpg'); background-size: cover; background-position: center; background-attachment: scroll;">
         <div class="logo-container">
             <div class="logo">
                 <i class="fa fa-leaf logo-icon"></i>
